# collab-ai

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/app/: config.py  main.py
src/app/api/: models.py
src/app/api/v1/: routes.py
src/app/database/: __init__.py  models.py  repository.py  sqlalchemy.py
src/app/llm/: client.py  models.py  utils.py
src/app/models/: base.py  db.py
src/app/orchestrators/: base.py  base_orchestrator.py  langgraph.py  models.py  utils.py
src/app/orchestrators/agents/: dev.py  models.py  po.py
src/app/orchestrators/langgraph/: langgraph.py  models.py
src/app/services/: execution_service.py
src/app/telemetry/: langfuse.py
src/scripts/: test_db.py
tests/: test_health.py  test_repository.py
