[tool.poetry]
name = "collab-ai"
version = "0.1.0"
description = "Collaborative multi-agent system for agile software development"
authors = ["Samrawit F. Abebe, 550955@muni.cz"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.121.0"
uvicorn = { version = "0.38.0", extras = ["standard"] }
pydantic-settings = "2.11.0"
sqlalchemy = "2.0.44"
langgraph = "^1.0.3"
langchain = "^1.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
ruff = "0.14.3"
mypy = "1.18.2"
httpx = "0.28.1"
pre-commit = "4.3.0"

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
pretty = true
disallow_untyped_decorators = false
disable_error_code = ["type-var"]

[[tool.mypy.overrides]]
module = ["tests.*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core==2.2.1"]
build-backend = "poetry.core.masonry.api"
